add persistence across videos

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "description": "watermark manipulator for documentaryarea.com",
     "permissions": [
         "activeTab",
-        "scripting"
+        "scripting",
+        "storage"
     ],
     "background": {
         "service_worker": "background.js"
